fluxcd/core/base/tor-controller/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tor-controller
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tor-controller
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: vmagent
    ports:
    - port: 8443
      protocol: TCP
